--- a/cms_mining/.classpath
+++ b/cms_mining/.classpath
@@ -3,5 +3,12 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/jsoup-1.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient/fluent-hc-4.3.5.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient/httpclient-4.3.5.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient/httpclient-cache-4.3.5.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient/httpmime-4.3.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
